--- a/GameEngine.vcxproj.filters
+++ b/GameEngine.vcxproj.filters
@@ -9,10 +9,38 @@
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="GameEngine.cpp" />
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Core.cpp" />
+    <ClCompile Include="Direct2D.cpp" />
+    <ClCompile Include="Direct3D.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="ModelFormats.cpp" />
+    <ClCompile Include="Polygons.cpp" />
+    <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Shared.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Universe.cpp" />
+    <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="Core.h" />
+    <ClInclude Include="Direct2D.h" />
+    <ClInclude Include="Direct3D.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Light.h" />
+    <ClInclude Include="ModelFormats.h" />
+    <ClInclude Include="Polygons.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="Shared.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="Timer.h" />
+    <ClInclude Include="Universe.h" />
+    <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Logo.scale-200.png">
@@ -39,5 +67,9 @@
     <None Include="README.md" />
     <None Include=".gitignore" />
     <None Include=".gitattributes" />
+    <None Include="settings.lua" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
 </Project>
