--- a/GameEngine.vcxproj.filters
+++ b/GameEngine.vcxproj.filters
@@ -1,78 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Assets">
-      <UniqueIdentifier>e5e4f7bd-7047-4997-8d9d-40d6092c2faf</UniqueIdentifier>
-      <Extensions>bmp;fbx;gif;jpg;jpeg;tga;tiff;tif;png</Extensions>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="pch.cpp" />
-    <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="Direct2D.cpp" />
     <ClCompile Include="Direct3D.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="ModelFormats.cpp" />
+    <ClCompile Include="pch.cpp" />
     <ClCompile Include="Polygons.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Shared.cpp" />
+    <ClCompile Include="Settings.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Universe.cpp" />
     <ClCompile Include="Utilities.cpp" />
-    <ClCompile Include="Logger.cpp" />
-    <ClCompile Include="Settings.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="Direct2D.h" />
     <ClInclude Include="Direct3D.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="ModelFormats.h" />
+    <ClInclude Include="pch.h" />
     <ClInclude Include="Polygons.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Shared.h" />
+    <ClInclude Include="Settings.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Universe.h" />
     <ClInclude Include="Utilities.h" />
-    <ClInclude Include="Logger.h" />
-    <ClInclude Include="Settings.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Assets\Logo.scale-200.png">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Assets\SmallLogo.scale-200.png">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Assets\SplashScreen.scale-200.png">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Assets\StoreLogo.png">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Assets\WideLogo.scale-200.png">
-      <Filter>Assets</Filter>
-    </Image>
+    <Image Include="Assets\Logo.scale-200.png" />
+    <Image Include="Assets\SmallLogo.scale-200.png" />
+    <Image Include="Assets\SplashScreen.scale-200.png" />
+    <Image Include="Assets\StoreLogo.png" />
+    <Image Include="Assets\WideLogo.scale-200.png" />
+    <Image Include="textures\clouds.tga" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
     <None Include="GameEngine_TemporaryKey.pfx" />
     <None Include="README.md" />
-    <None Include=".gitignore" />
-    <None Include=".gitattributes" />
+    <None Include="graphics\pixelL.hlsl" />
+    <None Include="graphics\pixelT.hlsl" />
+    <None Include="graphics\vertexL.hlsl" />
+    <None Include="graphics\vertexT.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
+    <Text Include="models\cube.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="graphics\pixel.hlsl" />
+    <FxCompile Include="graphics\vertex.hlsl" />
   </ItemGroup>
 </Project>
