FullScreen+CameraPosition+Directories

--- a/GameEngine.vcxproj
+++ b/GameEngine.vcxproj
@@ -142,7 +142,6 @@
       <AdditionalLibraryDirectories>$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
@@ -162,7 +161,6 @@
       <AdditionalLibraryDirectories>$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
@@ -182,7 +180,6 @@
       <AdditionalLibraryDirectories>$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
@@ -203,7 +200,6 @@
       <AdditionalLibraryDirectories>$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
@@ -224,8 +220,6 @@
       <AdditionalLibraryDirectories>$(VcpkgRoot)..\.\x64-windows\lib;$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(VcpkgRoot)..\.\x64-windows\include;$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
       <AdditionalOptions>/bigobj /await %(AdditionalOptions)</AdditionalOptions>
@@ -235,6 +229,7 @@
       <CompileAsWinRT>false</CompileAsWinRT>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <PreBuildEvent>
       <Command>
@@ -252,8 +247,6 @@ xcopy /y /d "$(VcpkgRoot)..\.\x64-windows\tools\lua\lua.dll" "$(LayoutDir)"</Com
       <AdditionalLibraryDirectories>$(VcpkgRoot)..\.\x64-windows\lib;$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(VcpkgRoot)..\.\x64-windows\include;$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
       <AdditionalOptions>/bigobj /await %(AdditionalOptions)</AdditionalOptions>
@@ -263,6 +256,7 @@ xcopy /y /d "$(VcpkgRoot)..\.\x64-windows\tools\lua\lua.dll" "$(LayoutDir)"</Com
       <CompileAsWinRT>false</CompileAsWinRT>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <PreBuildEvent>
       <Command>
@@ -280,7 +274,6 @@ xcopy /y /d "$(VcpkgRoot)..\.\x64-windows\tools\lua\lua.dll" "$(LayoutDir)"</Com
       <AdditionalLibraryDirectories>$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
@@ -300,7 +293,6 @@ xcopy /y /d "$(VcpkgRoot)..\.\x64-windows\tools\lua\lua.dll" "$(LayoutDir)"</Com
       <AdditionalLibraryDirectories>$(VcpkgRoot);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedUsingFiles />
@@ -313,54 +305,6 @@ xcopy /y /d "$(VcpkgRoot)..\.\x64-windows\tools\lua\lua.dll" "$(LayoutDir)"</Com
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="Core.h" />
-    <ClInclude Include="Direct2D.h" />
-    <ClInclude Include="Direct3D.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="Light.h" />
-    <ClInclude Include="Logger.h" />
-    <ClInclude Include="ModelFormats.h" />
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="Polygons.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="Shared.h" />
-    <ClInclude Include="Settings.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="Timer.h" />
-    <ClInclude Include="Universe.h" />
-    <ClInclude Include="Utilities.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Core.cpp" />
-    <ClCompile Include="Direct2D.cpp" />
-    <ClCompile Include="Direct3D.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="GameEngine.cpp" />
-    <ClCompile Include="Light.cpp" />
-    <ClCompile Include="Logger.cpp" />
-    <ClCompile Include="ModelFormats.cpp" />
-    <ClCompile Include="pch.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">Create</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="Polygons.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="Shared.cpp" />
-    <ClCompile Include="Settings.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="Timer.cpp" />
-    <ClCompile Include="Universe.cpp" />
-    <ClCompile Include="Utilities.cpp" />
-  </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
@@ -427,6 +371,55 @@ xcopy /y /d "$(VcpkgRoot)..\.\x64-windows\tools\lua\lua.dll" "$(LayoutDir)"</Com
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</DeploymentContent>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="common\Logger.cpp" />
+    <ClCompile Include="common\Settings.cpp" />
+    <ClCompile Include="common\Utilities.cpp" />
+    <ClCompile Include="Core.cpp" />
+    <ClCompile Include="directx\Camera.cpp" />
+    <ClCompile Include="directx\Direct2D.cpp" />
+    <ClCompile Include="directx\Direct3D.cpp" />
+    <ClCompile Include="directx\Timer.cpp" />
+    <ClCompile Include="directx\Universe.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameEngine.cpp" />
+    <ClCompile Include="objects\ModelFormats.cpp" />
+    <ClCompile Include="objects\Polygons.cpp" />
+    <ClCompile Include="pch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="resources\Light.cpp" />
+    <ClCompile Include="resources\Shader.cpp" />
+    <ClCompile Include="resources\Texture.cpp" />
+    <ClCompile Include="Shared.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common\Logger.h" />
+    <ClInclude Include="common\Settings.h" />
+    <ClInclude Include="common\Utilities.h" />
+    <ClInclude Include="Core.h" />
+    <ClInclude Include="directx\Camera.h" />
+    <ClInclude Include="directx\Direct2D.h" />
+    <ClInclude Include="directx\Direct3D.h" />
+    <ClInclude Include="directx\Timer.h" />
+    <ClInclude Include="directx\Universe.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="objects\ModelFormats.h" />
+    <ClInclude Include="objects\Polygons.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="resources\Light.h" />
+    <ClInclude Include="resources\Shader.h" />
+    <ClInclude Include="resources\Texture.h" />
+    <ClInclude Include="Shared.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
