XAMLConcepts+Threads+BunchOfFixes

--- a/XamlApp/GameEngine.vcxproj.filters
+++ b/XamlApp/GameEngine.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Shared.cpp" />
+    <ClCompile Include="MainPageTypes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -52,6 +53,7 @@
     <ClInclude Include="Core.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Shared.h" />
+    <ClInclude Include="MainPageTypes.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
